// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "spring/rpc/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

package google.showcase.v1beta1;

option go_package = "github.com/googleapis/gapic-showcase/server/genproto";
option java_package = "com.google.showcase.v1beta1";
option java_multiple_files = true;

// A simple identity service.
service Identity {
    rpc CreateUser(CreateUserRequest) returns (User);

    rpc GetUser(GetUserRequest) returns (User) {
        option (spring.rpc.overrides).path = "/api/GetUser";
    }
}

// A user.
message User {
    // The resource name of the user.
    string name = 1;

    // The display_name of the user.
    string display_name = 2;

    // The email address of the user.
    string email = 3;

    // The timestamp at which the user was created.
    google.protobuf.Timestamp create_time = 4;

    // The latest timestamp at which the user was updated.
    google.protobuf.Timestamp update_time = 5;
}

// The request message for the google.showcase.v1beta1.Identity\CreateUser
// method.
message CreateUserRequest {
    // The user to create.
    User user = 1;
}

// The request message for the google.showcase.v1beta1.Identity\GetUser
// method.
message GetUserRequest {
    // The resource name of the requested user.
    string name = 1;
}
